# hermes

./: .gitignore  .rustc_info.json  Cargo.toml  README.md  README_zh.md  parasite.srt
src/: ai.rs  common.rs  ffmpeg.rs  lib.rs  main.rs  sub.rs  torrent.rs
src/sub/: srt.rs
tests/: parse_srt_file.rs
