[package]
name = "hermes"
version = "0.1.0"
edition = "2024"

[dependencies]
octocrab = "0.44.1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.98"
thiserror = "2.0.12"
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["derive"] }
regex = "1.11.1"
