[package]
name = "blowup"
version = "0.1.1"
edition = "2024"
authors = ["mouselee"]
rust-version = "1.88"
description = "All tools related to improving my movie-watching experience."
readme = "README.md"
repository = "https://github.com/XuanLee-HEALER/hermes"
license = "MIT"
license-file = "LICENSE.txt"
keywords = ["tracker", "srt", "movie", "torrent", "film"]
categories = ["command-line-utilities"]
exclude = ["*.srt"]

[dependencies]
octocrab = "0.44.1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["io-std", "process"] }
thiserror = "2.0.12"
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["derive"] }
regex = "1.11.1"
ollama-rs = { version = "0.3.2", features = ["stream"] }
tokio-stream = "0.1.17"
shellexpand = "3.1.1"
which = "8.0.0"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.20.0"
diff = "0.1.13"
